[tool.poetry]
name = "adibags-creator-action"
version = "0.1.0"
description = ""
authors = ["Zottelchen <github@zottelchen.com>"]
readme = "README.md"
packages = [{include = "adibags_creator_action"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
