[tool.poetry]
name = "adibags-creator-action"
version = "0.1.0"
description = ""
authors = ["Zottelchen <github@zottelchen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
colorama = "^0.4.6"
apprise = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
